Update with some improvements to the readme and appveyor (#2)

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,9 +40,13 @@ build:
   #verbosity: detailed
 
 cache:
-  - c:\tools\vcpkg\installed\
+  - c:\tools\vcpkg\installed\ -> appveyor.yml
+  - vc14\x64
 
-artifacts:
-  - path: \**\otclient*.exe
-  - path: \**\*.dll
+after_build:
+  - cmd: 7z a otclient.zip otclient.exe *.dll
   
+artifacts:
+  - path: otclient.exe
+  - path: '*.dll'
+  - path: otclient.zip  
