--- a/.github/workflows/build-vcpkg.yml
+++ b/.github/workflows/build-vcpkg.yml
@@ -1,24 +1,6 @@
 name: Build with vcpkg
 
-on:
-  push:
-    branches:
-      - master
-      - v*
-
-    tags:
-      - v*
-
-    paths:
-      - cmake/**
-      - src/**
-      - CMakeLists.txt
-
-  pull_request:
-    paths:
-      - cmake/**
-      - src/**
-      - CMakeLists.txt
+on: [push, pull_request]
 
 jobs:
   job:
@@ -29,8 +11,8 @@ jobs:
       max-parallel: 8
       matrix:
         name: [ubuntu-gcc, macos-clang, windows-msvc]
-        buildtype: [Debug, Release]
-        luajit: [on, off]
+        buildtype: [Release]
+        luajit: [on]
         include:
           - name: windows-msvc
             os: windows
@@ -62,24 +44,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: true
-
-      - name: Unshallow
-        run: git fetch --prune --unshallow
 
       - name: Get latest CMake
-        # Using 'latest' branch, the latest CMake is installed.
         uses: lukka/get-cmake@latest
 
-      - name: Ubuntu - install opengl lua5.1 luajit
+      - name: Ubuntu - install packages
+        if: contains( matrix.os, 'ubuntu')
         # vcpkg has lua 5.3+
         run: sudo apt-get install libglew-dev liblua5.1-0-dev libluajit-5.1-dev
-        if: contains( matrix.os, 'ubuntu')
 
-      - name: MacOS - install physfs pkgconfig lua5.1 luajit xquartz
-        run: brew install physfs pkgconfig lua@5.1 luajit xquartz
+      - name: MacOS - install packages
         if: contains( matrix.os, 'macos')
+        run: brew install physfs pkgconfig lua@5.1 luajit xquartz
 
       - name: Set Environment vars
         run: |
@@ -107,22 +83,22 @@ jobs:
         shell: bash
 
       - name: Upload artifact binary
+        if: "! contains( matrix.os, 'windows')"
         uses: actions/upload-artifact@v2
         with:
           name: otclient-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}-${{ github.sha }}
           path: ${{ runner.workspace }}/build/otclient
-        if: "! contains( matrix.os, 'windows')"
 
       - name: Upload artifact binary (exe)
+        if: contains( matrix.os, 'windows')
         uses: actions/upload-artifact@v2
         with:
           name: otclient-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}-${{ github.sha }}
           path: ${{ runner.workspace }}/build/otclient.exe
-        if: contains( matrix.os, 'windows')
 
       - name: Upload artifact binary (dlls)
+        if: contains( matrix.os, 'windows')
         uses: actions/upload-artifact@v2
         with:
           name: otclient-${{ matrix.name }}-${{ matrix.buildtype }}-luajit=${{ matrix.luajit }}-${{ github.sha }}
           path: ${{ runner.workspace }}/build/*.dll
-        if: contains( matrix.os, 'windows')
