Remove lua support and somes cmake adjustments (#7)
Somes cmakes adjustments and remove lib lua at the expense of luajit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.1)
 project(otclient)
 
-set(VERSION "1.0.0")
-
-option(FRAMEWORK_SOUND "Use SOUND " ON)
+option(FRAMEWORK_SOUND "Use SOUND " OFF)
 option(FRAMEWORK_GRAPHICS "Use GRAPHICS " ON)
 option(FRAMEWORK_XML "Use XML " ON)
 option(FRAMEWORK_NET "Use NET " ON)
@@ -43,8 +41,6 @@ if(WIN32)
 
     set(executable_SOURCES ${executable_SOURCES} otcicon.o)
 endif()
-
-add_definitions(-D"VERSION=\\"${VERSION}\\"")
 
 # add client executable
 add_executable(${PROJECT_NAME} ${framework_SOURCES} ${client_SOURCES} ${executable_SOURCES})
