--- a/src/framework/CMakeLists.txt
+++ b/src/framework/CMakeLists.txt
@@ -101,8 +101,6 @@ set(framework_SOURCES ${framework_SOURCES}
     ${CMAKE_CURRENT_LIST_DIR}/luaengine/luaobject.h
     ${CMAKE_CURRENT_LIST_DIR}/luaengine/luavaluecasts.cpp
     ${CMAKE_CURRENT_LIST_DIR}/luaengine/luavaluecasts.h
-    ${CMAKE_CURRENT_LIST_DIR}/luaengine/lbitlib.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/luaengine/lbitlib.h
 
     # otml
     ${CMAKE_CURRENT_LIST_DIR}/otml/declarations.h
@@ -129,12 +127,11 @@ set(framework_SOURCES ${framework_SOURCES}
 )
 
 if(NOT MSVC)
-    set_source_files_properties(${CMAKE_CURRENT_LIST_DIR}/luafunctions.cpp
-                                PROPERTIES LANGUAGE CXX COMPILE_FLAGS "-g0 -Os")
+set_source_files_properties(${CMAKE_CURRENT_LIST_DIR}/luafunctions.cpp
+            PROPERTIES LANGUAGE CXX COMPILE_FLAGS "-g0 -Os")
 endif()
 
 # some build options
-option(LUAJIT "Use lua jit" OFF)
 option(USE_STATIC_LIBS "Don't use shared libraries (dlls)" ON)
 if(NOT APPLE)
     option(CRASH_HANDLER "Generate crash reports" ON)
@@ -152,15 +149,15 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "RelWithDebInfo")
 endif()
 
-set(COMPILER_CXX_EXTRA_FLAGS       "-Wall -Wextra -Wno-unused -Wno-unused-parameter -Wno-unused-result -pipe")
-set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g")
+set(COMPILER_CXX_EXTRA_FLAGS "-Wall -Wextra -Wno-unused -Wno-unused-parameter -Wno-unused-result -pipe")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O1 -g -fno-omit-frame-pointer")
-set(CMAKE_CXX_FLAGS_RELEASE        "-O2")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 if (WIN32 AND MSVC)
-    set(COMPILER_CXX_EXTRA_FLAGS       "/bigobj")
-    set(CMAKE_CXX_FLAGS_DEBUG          "/Od /DEBUG:FULL")
+    set(COMPILER_CXX_EXTRA_FLAGS "/bigobj")
+    set(CMAKE_CXX_FLAGS_DEBUG "/Od /DEBUG:FULL")
     set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/O12 /DEBUG:FASTLINK")
-    set(CMAKE_CXX_FLAGS_RELEASE        "/Ot")
+    set(CMAKE_CXX_FLAGS_RELEASE "/Ot")
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_CXX_EXTRA_FLAGS} ${ARCH_FLAGS} ${CPP2011_FLAGS}")
@@ -202,32 +199,27 @@ set(Boost_USE_STATIC_LIBS ${USE_STATIC_LIBS})
 find_package(Boost 1.48.0 COMPONENTS ${REQUIRED_BOOST_COMPONENTS} REQUIRED)
 
 #find lua
-if(LUAJIT)
-    find_package(LuaJIT REQUIRED)
-    set(LUA_INCLUDE_DIR ${LUAJIT_INCLUDE_DIR})
-    set(LUA_LIBRARY ${LUAJIT_LIBRARY})
+find_package(LuaJIT REQUIRED)
+set(LUAJIT_INCLUDE_DIR ${LUAJIT_INCLUDE_DIR})
+set(LUAJIT_LIBRARY ${LUAJIT_LIBRARY})
 
-    if(APPLE)
-      set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -pagezero_size 10000 -image_base 100000000")
-    endif()
-else()
-    find_package(Lua REQUIRED)
+if(APPLE)
+    set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -pagezero_size 10000 -image_base 100000000")
 endif()
-message(STATUS "LuaJIT: " ${LUAJIT})
 
 find_package(PhysFS REQUIRED)
 find_package(ZLIB REQUIRED)
 
 set(framework_LIBRARIES ${framework_LIBRARIES}
     ${Boost_LIBRARIES}
-    ${LUA_LIBRARY}
+    ${LUAJIT_LIBRARY}
     ${PHYSFS_LIBRARY}
     ${ZLIB_LIBRARY}
 )
 
 set(framework_INCLUDE_DIRS ${framework_INCLUDE_DIRS}
     ${Boost_INCLUDE_DIRS}
-    ${LUA_INCLUDE_DIR}
+    ${LUAJIT_INCLUDE_DIR}
     ${PHYSFS_INCLUDE_DIR}
     ${framework_INCLUDE_DIRS}
 )
@@ -277,7 +269,7 @@ if(WIN32)
     endif()
 
     set(framework_DEFINITIONS ${framework_DEFINITIONS} -D_WIN32_WINNT=0x0501 -DWIN32)
-    #set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -Wl,--large-address-aware") # strip all debug information
+    set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -Wl,--large-address-aware") # strip all debug information
     set(SYSTEM_LIBRARIES "")
 else()
     if(APPLE)
