--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,86 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
+
+# CMAKE
+# apt install build-essential git
+# git clone https://github.com/Kitware/CMake/; cd CMake
+# ./bootstrap && make && sudo make install
+
+# VCPKG
+# cmake -DCMAKE_TOOLCHAIN_FILE=/opt/workspace/vcpkg/scripts/buildsystems/vcpkg.cmake ..
+# ./vcpkg install boost-asio boost-lockfree boost-variant boost-filesystem boost-iostreams boost-system libmariadb pugixml spdlog
+if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
+      CACHE STRING "")
+endif()
+
+if(DEFINED ENV{VCPKG_DEFAULT_TRIPLET} AND NOT DEFINED VCPKG_TARGET_TRIPLET)
+  set(VCPKG_TARGET_TRIPLET "$ENV{VCPKG_DEFAULT_TRIPLET}" CACHE STRING "")
+endif()
+
+set(VCPKG_FEATURE_FLAGS "versions")
+set(VCPKG_BUILD_TYPE "release")
+
+
+# *****************************************************************************
+# Project otclient
+# *****************************************************************************
 project(otclient)
 
+
+# *****************************************************************************
+# Append cmake search path
+# *****************************************************************************
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+
+# *****************************************************************************
+# Include cmake tools
+# *****************************************************************************
+include(MessageColors)
+include(LoggingHelper)
+
+
+# *****************************************************************************
+# Options
+# *****************************************************************************
 option(FRAMEWORK_SOUND "Use SOUND " OFF)
 option(FRAMEWORK_GRAPHICS "Use GRAPHICS " ON)
 option(FRAMEWORK_XML "Use XML " ON)
 option(FRAMEWORK_NET "Use NET " ON)
 option(FRAMEWORK_SQL "Use SQL" OFF)
+
+# *****************************************************************************
+# Options Code
+# *****************************************************************************
+
+# === CCACHE ===
+if(OPTIONS_ENABLE_CCACHE)
+    find_program(CCACHE ccache)
+    if(CCACHE)
+        log_option_enabled("ccache")
+        set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE})
+        else()
+        log_option_disabled("ccache")
+    endif()
+endif()
+
+
+# === IPO ===
+option(OPTIONS_ENABLE_IPO "Check and Enable interprocedural optimization (IPO/LTO)" ON)
+if(OPTIONS_ENABLE_IPO)
+  log_option_enabled("ipo")
+
+  include(CheckIPOSupported)
+  check_ipo_supported(RESULT result OUTPUT output)
+  if(result)
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+  else()
+    log_war("IPO is not supported: ${output}")
+  endif()
+else()
+  log_option_disabled("ipo")
+endif()
+
 
 include(src/framework/CMakeLists.txt)
 include(src/client/CMakeLists.txt)
@@ -44,8 +119,6 @@ endif()
 
 # add client executable
 add_executable(${PROJECT_NAME} ${framework_SOURCES} ${client_SOURCES} ${executable_SOURCES})
-
-# target_compile_options(${PROJECT_NAME} PUBLIC -fPIC)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD_REQUIRED ON)
