Add sonar report (#20)

--- a/.github/workflows/analysis-sonarcloud.yml
+++ b/.github/workflows/analysis-sonarcloud.yml
@@ -68,7 +68,8 @@ jobs:
           unzip -q build-wrapper-linux-x86.zip
           echo "${PWD}/build-wrapper-linux-x86" >> $GITHUB_PATH
 
-      - name: SonarCloud Scan
+      - name: SonarCloud PR Scan
+        if: ${{ github.event_name == 'pull_request' || github.event_name == 'pull_request_target' }}
         run: |
           NUMBER_OF_PROCESSORS=$(nproc --all)
           mkdir -p build
@@ -76,7 +77,36 @@ jobs:
           cmake ..
           cd ..
           build-wrapper-linux-x86-64 --out-dir bw-output cmake --build build/
-          sonar-scanner -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=opentibiabr -Dsonar.login=$SONAR_TOKEN -Dsonar.cfamily.threads=${NUMBER_OF_PROCESSORS} -Dsonar.cfamily.cache.enabled=true -Dsonar.cfamily.cache.path=$HOME/.cfamily
+          sonar-scanner \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.organization=opentibiabr \
+            -Dsonar.login=$SONAR_TOKEN \
+            -Dsonar.cfamily.threads=${NUMBER_OF_PROCESSORS} \
+            -Dsonar.cfamily.cache.enabled=true \
+            -Dsonar.cfamily.cache.path=$HOME/.cfamily \
+            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }}  \
+            -Dsonar.pullrequest.branch=${{ github.head_ref }}  \
+            -Dsonar.pullrequest.base=${{ github.base_ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: SonarCloud Scan
+        if: ${{ github.event_name == 'push' }}
+        run: |
+          NUMBER_OF_PROCESSORS=$(nproc --all)
+          mkdir -p build
+          cd build
+          cmake ..
+          cd ..
+          build-wrapper-linux-x86-64 --out-dir bw-output cmake --build build/
+          sonar-scanner \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.organization=opentibiabr \
+            -Dsonar.login=$SONAR_TOKEN \
+            -Dsonar.cfamily.threads=${NUMBER_OF_PROCESSORS} \
+            -Dsonar.cfamily.cache.enabled=true \
+            -Dsonar.cfamily.cache.path=$HOME/.cfamily \
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
